<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    	<Preference android:title="@string/label_rebootaf" android:key="mess" android:summary="@string/nosum" style="?android:preferenceInformationStyle" />
    	<PreferenceCategory
	android:key="data_category"
	android:title="@string/datac" >
	</PreferenceCategory>
	<CheckBoxPreference
	    android:key="key_dataw"
	    android:title="@string/label_dataw"
	    android:summary="@string/sum_dataw"
	    android:defaultValue="false" />
	<CheckBoxPreference
	    android:key="key_dataicon"
	    android:title="@string/label_dataicon"
	    android:summary="@string/sum_dataicon"
	    android:defaultValue="false" />
	    <CheckBoxPreference
	    android:key="key_dataiconon"
	    android:title="@string/label_dataiconon"
	    android:summary="@string/sum_dataiconon"
	    android:defaultValue="false" />
	    <CheckBoxPreference
	    android:key="key_dataiconona"
	    android:title="@string/label_dataiconona"
	    android:summary="@string/sum_dataiconona"
	    android:defaultValue="false" />
	    <CheckBoxPreference
	    android:key="key_prefmode"
	    android:title="@string/label_prefmode"
	    android:summary="@string/sum_prefmode"
	    android:defaultValue="false" />
	    <EditTextPreference 
	    android:defaultValue="0,1,2,3,4,5,6,7,8,9,10,11" 
	    android:key="key_prefedit" 
	    android:title="@string/label_prefedit"
	    android:summary="@string/sum_prefedit"
	    android:dependency="key_prefmode"
	    />
	    
	    <PreferenceCategory
	android:key="call_category"
	android:title="@string/callc" >
	</PreferenceCategory>
	    <CheckBoxPreference
	    android:key="key_callrec"
	    android:title="@string/label_callrec"
	    android:summary="@string/sum_callrec"
	    android:defaultValue="false" />
	    <CheckBoxPreference
	    android:key="key_callend"
	    android:title="@string/label_callend"
	    android:summary="@string/sum_callend"
	    android:disableDependentsState="true"
	    android:defaultValue="false" />
	    <CheckBoxPreference
	    android:key="key_callend3"
	    android:title="@string/label_callend3"
	    android:summary="@string/sum_callend3"
	    android:dependency="key_callend"
	    android:defaultValue="false" />
	    <CheckBoxPreference
	    android:key="key_rejectmsg"
	    android:title="@string/label_rejectmsg"
	    android:summary="@string/sum_rejectmsg"
	    android:disableDependentsState="true"
	    android:defaultValue="false" />
	    <CheckBoxPreference
	    android:key="key_rejectmsgz3"
	    android:title="@string/label_rejectmsgz3"
	    android:summary="@string/sum_rejectmsgz3"
	    android:dependency="key_rejectmsg"
	    android:defaultValue="false" />
	    <!--<CheckBoxPreference
	    android:key="key_rejectmsge1"
	    android:title="@string/label_rejectmsgz3"
	    android:summary="@string/sum_rejectmsge1"
	    android:dependency="key_rejectmsg"
	    android:defaultValue="false" /> -->
	    <CheckBoxPreference
	    android:key="key_camoff"
	    android:title="@string/label_camoff"
	    android:summary="@string/sum_camoff"
	    android:defaultValue="false" />
	    <CheckBoxPreference
	    android:key="key_voonly"
	    android:title="@string/label_voonly"
	    android:summary="@string/sum_voonly"
	    android:defaultValue="false" />
	    <CheckBoxPreference
	    android:key="key_novcbutton"
	    android:title="@string/label_novcbutton"
	    android:summary="@string/sum_novcbutton"
	    android:defaultValue="false" />
	    <CheckBoxPreference
	    android:key="key_volte"
	    android:title="@string/label_volte"
	    android:summary="@string/sum_volte"
	    android:defaultValue="false" />
	    
	    <PreferenceCategory
	android:key="call_category"
	android:title="@string/soundc" >
	</PreferenceCategory>
	    <CheckBoxPreference
	    android:key="key_soundeh"
	    android:title="@string/label_soundeh"
	    android:summary="@string/sum_soundeh"
	    android:defaultValue="false" />
	
	<Preference android:key="mes" android:title="@string/app_name" android:summary="@string/mesum">
            <intent android:action="android.intent.action.VIEW"
             android:data="http://androplus.kagome-kagome.com/" />
        </Preference>
</PreferenceScreen>